--- a/scss/_mediaQuerys.scss
+++ b/scss/_mediaQuerys.scss
@@ -151,6 +151,14 @@
                         border: 0.2rem solid #1E2022 ;
                         border-radius: 1rem;
                     }
+                    .imagen-proyecto:hover{
+                        box-shadow: 0 0 1rem #4f9;
+                        border: 0.1rem solid #4f9;
+                    }
+                }
+                .box-imagen-proyectos:hover{
+                    box-shadow: none;
+                    border: none;
                 }
             }
         }
@@ -306,6 +314,14 @@
                         border-radius: 1rem;
                         height: 90%;
                     }
+                    .imagen-proyecto:hover{
+                        box-shadow: 0 0 1rem #4f9;
+                        border: 0.1rem solid #4f9;
+                    }
+                }
+                .box-imagen-proyectos:hover{
+                    box-shadow: none;
+                    border: none;
                 }
             }
         }
